# IOT-Weather-Station

./: .gitignore  README.md
pi/: README.md  piot.py  pyproject.toml
weather-app/: agent.py  app.py  weather_station.db
weather-app/templates/: index.html
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
website/client/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
website/client/src/: App.svelte  stores.js
website/client/src/lib/: Banner.svelte  Card.svelte  CurrentCondition.svelte  DarkMode.svelte  DataCard.svelte  DataCompare.svelte  DataDropdown.svelte  Dropdown.svelte  Gauge.svelte  Graph.svelte  GraphCard.svelte  Header.svelte  Nav.svelte  Toggle.svelte  ToggleMenu.svelte
website/server/: README.md
website/src/: App.svelte  app.pcss  stores.js
website/src/lib/: Banner.svelte  CurrentCondition.svelte  DataCard.svelte  DataDropdown.svelte  Gauge.svelte  Graph.svelte  Header.svelte
