[tool.poetry]
name = "piot"
version = "0.1.0"
description = ""
authors = ["AntonioArtigas <48927276+AntonioArtigas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
adafruit-circuitpython-dht = "^4.0.4"
adafruit-circuitpython-lps2x = "^3.0.7"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
